tests/ui/error-codes/E0534.rs
#[inline()] //~ ERROR E0534
pub fn something() {}

fn main() {
    something();
}
